--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,14 @@
-<h1>The Ultimate Tag Manager</h1>
-{% block content %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="static/style.css" rel="stylesheet" type="text/css">
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>The Ultimate Tag Manager</h1>
+    {% block content %}
+    {% endblock %}
+  </body>
+</html>
