--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,20 @@
-<h1>A Uniquely World-Changing Super-Proprietary Way of Managing Tags</h1>
-<p>This is the only website ever designed that has at least one of the properties common to every other website ever designed.</p>
-<p>A highly respected source has said, "I'd rather use this site than use one of the best sites in the world!"'</p>
+<<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>SPICY AF!!!!</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+       Oh So Spice! So Spice!!!!!
+        
+        <script src="" async defer></script>
+    </body>
+</html>>
