--- a/templates/about.html
+++ b/templates/about.html
@@ -14,6 +14,7 @@
     </head>
     <body>
        Oh So Spice! So Spice!!!!!
+       Oh So Nice! So Nice!!!!
         
         <script src="" async defer></script>
     </body>
