more spice + nice

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,6 +15,7 @@
     <body>
        Oh So Spice! So Spice!!!!!
        Oh So Nice! So Nice!!!!
+       more spice, more nice!
         
         <script src="" async defer></script>
     </body>
