--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <h1>HOLLA BACK GURL</h1>
-        <H3>SPICY SPICY SPICY</H3>
+        <h3>SPICY SPICY SPICY</h3>
         <a href="https://unsplash.com/s/photos/cute-cat">CUTE!</a>        
         <p>Oh So Spice! So Spice!!!!!
            Oh So Nice! So Nice!!!!
